--- a/admin.html
+++ b/admin.html
@@ -29,7 +29,7 @@
   </style>
 </head>
 <body>
-  <h1>Panel de Administración - Tilo Café</h1>
+  <h1>Panel de Administración - Tilo French</h1>
 
   <!-- TOKEN -->
   <div style="margin-bottom:15px; background:#eee; padding:10px; border-radius:8px;">
