--- a/index.html
+++ b/index.html
@@ -137,12 +137,12 @@
     <button onclick="renderProducts('CAFETERÍA')"><span class="icon">☕</span>Cafetería</button>
     <button onclick="renderProducts('PICADAS')"><span class="icon">🥟</span>Entradas</button>
     <button onclick="renderProducts('COMIDAS')"><span class="icon">🍽️</span>Comidas</button>
-    <button onclick="renderProducts('SANDWICHES')"><span class="icon">🥪</span>Sándwiches</button>
-    <button onclick="renderProducts('PROMOCIONES')"><span class="icon">💥</span>Promociones</button>
+    <button onclick="renderProducts('SÁNDWICHES')"><span class="icon">🥪</span>Sándwiches</button>
+    <button onclick="renderProducts('PROMOCIONES')"><span class="icon">💥</span>Desayuno/Merienda</button>
     <button onclick="renderProducts('POSTRES')"><span class="icon">🍰</span>Postres</button>
-    <button onclick="renderProducts('REFRESCOS')"><span class="icon">🥤🍷</span>Refrescos y Vinos</button>
-    <button onclick="renderProducts('TRAGOS')"><span class="icon">🍹⏰</span>Tragos y HAPPY HOUR</button>
-    <button onclick="renderProducts('EVENTOS')"><span class="icon">⭐</span>EVENTOS Y NOVEDADES</button>
+    <button onclick="renderProducts('REFRESCOS')"><span class="icon">🥤🍷</span>Bebidas y Vinos</button>
+    <button onclick="renderProducts('TRAGOS')"><span class="icon">🍹⏰</span>Aperitivos y HAPPY HOUR</button>
+    <button onclick="renderProducts('EVENTOS')"><span class="icon">⭐</span>EVENTOS/NOVEDADES Y MENÚ DEL DIA</button>
   </nav>
 
   <div class="item-list" id="product-list"></div>
