--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       margin: 0;
       background: url("img/Fondo1.jpg") repeat;
       background-size: cover;
-      color: #45270a;
+      color: #8888;
     }
     header {
       background: rgba(255,255,255,0.9);
@@ -91,7 +91,7 @@
 <body>
   <!-- FOTO GRANDE ARRIBA -->
   <header>
-    <img src="img/Logo99.jpg" alt="Tilo Café French 3700" class="banner-img" />
+    <img src="img/french99.jpg" alt="Tilo Café French 3700" class="banner-img" />
   </header>
 
   <div class="banner">¡Bienvenidos a Tilo French 3700!</div>
