--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       margin: 0;
       background: url("img/Fondo1.jpg") repeat;
       background-size: cover;
-      color: #8888;
+      color: #45270a;
     }
     header {
       background: rgba(255,255,255,0.9);
