--- a/admin.html
+++ b/admin.html
@@ -1,264 +1,92 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Admin Carta - Tilo French</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Admin - Tilo Café French</title>
   <style>
-    body { font-family: Arial, sans-serif; margin:20px; background:#f7f3f0; color:#333;}
-    h1 { text-align: center; color:#806250; }
-    form { background:#fff; padding:15px; border-radius:10px; margin-bottom:20px;}
-    input,textarea,select { width:100%; padding:8px; margin:6px 0; border:1px solid #ccc; border-radius:6px;}
-    table { width:100%; border-collapse:collapse; background:#fff;}
-    th,td { border:1px solid #ddd; padding:8px; text-align:left;}
-    th { background:#806250; color:white; }
-    img { max-width:60px; border-radius:6px; }
-    button { cursor:pointer; background:#806250; color:white; border:none; padding:6px 10px; border-radius:6px; }
-    button:hover { background:#a07b68; }
-    #preview { max-width:100px; margin-top:5px; display:block; }
-    #search { width:40%; padding:8px; border-radius:6px; border:1px solid #ccc; }
-    #btnSubir {
-      position: fixed; bottom: 25px; right: 25px;
-      background: #8c6954; color: white;
-      border: none; border-radius: 50%;
-      width: 50px; height: 50px; font-size: 1.5rem;
-      cursor: pointer; box-shadow: 0 2px 8px rgba(0,0,0,0.3);
-      display: none; transition: opacity 0.3s ease;
-    }
-    #btnSubir:hover { background: #6b4e3d; }
+    body{font-family:Arial,sans-serif;margin:20px;background:#f7f3f0;color:#333;}
+    h1{text-align:center;color:#806250;}
+    form{background:#fff;padding:15px;border-radius:10px;margin-bottom:20px;transition:box-shadow .4s;}
+    form.editando{box-shadow:0 0 15px #806250;}
+    input,textarea,datalist{width:100%;padding:8px;margin:6px 0;border:1px solid #ccc;border-radius:6px;}
+    table{width:100%;border-collapse:collapse;background:#fff;}
+    th,td{border:1px solid #ddd;padding:8px;text-align:left;}
+    th{background:#806250;color:#fff;}
+    img{max-width:60px;border-radius:6px;}
+    button{cursor:pointer;background:#806250;color:#fff;border:none;padding:6px 10px;border-radius:6px;}
+    #preview{max-width:100px;margin-top:5px;display:block;}
+    .search-row{display:flex;gap:8px;margin-bottom:12px;align-items:center;}
+    .search-row input{flex:1;padding:8px;border-radius:6px;border:1px solid #ccc;}
+    .search-row button{padding:8px 12px;border-radius:6px;}
+    #btnArriba{position:fixed;bottom:25px;right:25px;width:45px;height:45px;border-radius:50%;background:#806250;color:#fff;border:none;display:none;cursor:pointer;}
   </style>
 </head>
 <body>
-  <h1>Panel de Administración - Tilo French</h1>
+  <h1>Admin - Tilo Café French</h1>
 
-  <!-- TOKEN -->
-  <div style="margin-bottom:15px; background:#eee; padding:10px; border-radius:8px;">
-    <label for="token">Token de GitHub:</label><br>
-    <input type="password" id="token" placeholder="Pega tu token aquí" style="width:70%; padding:8px;">
+  <div style="background:#eee;padding:10px;border-radius:8px;margin-bottom:12px;">
+    <label>Token de GitHub:</label><br>
+    <input id="token" type="password" placeholder="Pega tu token aquí" style="width:70%;padding:8px;">
     <button onclick="saveToken()">Guardar Token</button>
     <button onclick="clearToken()">Borrar Token</button>
     <p id="tokenStatus"></p>
   </div>
 
-  <!-- BUSCADOR -->
-  <div style="margin-bottom:15px;">
-    <input type="text" id="search" placeholder="Buscar producto... (Enter para buscar)">
+  <div class="search-row">
+    <input id="search" placeholder="Buscar producto... (Enter para buscar)">
+    <button id="btnSearch">Buscar</button>
   </div>
 
-  <!-- FORMULARIO -->
   <form id="form">
     <input type="hidden" id="editIndex">
-    <label>Nombre</label>
-    <input type="text" id="nombre" required>
-
-    <label>Descripción</label>
-    <textarea id="descripcion" required></textarea>
-
-    <label>Precio</label>
-    <input type="number" id="precio" required>
-
-    <label>Imagen (ej: img/foto.jpg)</label>
-    <input type="text" id="imagen" required oninput="previewImage()">
-    <img id="preview" src="" alt="Vista previa">
-
-    <label>Categoría</label>
-    <input list="categorias" id="categoria" required placeholder="Elegí o escribí una categoría">
-    <datalist id="categorias">
-      <option value="CAFETERÍA">
-      <option value="COMIDAS">
-      <option value="POSTRES">
-      <option value="TRAGOS">
-      <option value="REFRESCOS">
-      <option value="ENTRADAS">
-      <option value="EVENTOS">
-      <option value="PROMOCIONES">
-      <option value="SÁNDWICHES">
-    </datalist>
-
+    <label>Nombre</label><input id="nombre" required>
+    <label>Descripción</label><textarea id="descripcion" required></textarea>
+    <label>Precio</label><input id="precio" type="number" required>
+    <label>Imagen (ej: img/foto.jpg)</label><input id="imagen" required oninput="previewImage()">
+    <img id="preview" src="" alt="Preview">
+    <label>Categoría</label><input list="listaCategorias" id="categoria" required><datalist id="listaCategorias"></datalist>
     <button type="submit">Guardar</button>
   </form>
 
-  <!-- TABLA -->
   <h2 id="tablaTitulo">Productos</h2>
-  <table>
-    <thead>
-      <tr>
-        <th>Imagen</th><th>Nombre</th><th>Descripción</th><th>Categoría</th><th>Precio</th><th>Acciones</th>
-      </tr>
-    </thead>
-    <tbody id="tbody"></tbody>
-  </table>
+  <table><thead><tr><th>Imagen</th><th>Nombre</th><th>Descripción</th><th>Categoría</th><th>Precio</th><th>Acciones</th></tr></thead><tbody id="tbody"></tbody></table>
+  <button id="btnArriba" title="Subir">⬆️</button>
 
-  <!-- Botón para subir -->
-  <button id="btnSubir" title="Subir">⬆️</button>
+<script>
+document.addEventListener('DOMContentLoaded', () => {
+  const USER='cholose10'; const REPO='cartafrench'; const FILE='productos.json';
+  const RAW_URL=`https://raw.githubusercontent.com/${USER}/${REPO}/main/${FILE}`;
+  let productos=[];
 
-  <script>
-    const USERNAME = "cholose10";
-    const REPO = "cartafrench";
-    const FILE_PATH = "productos.json";
+  const tokenEl=document.getElementById('token'); const statusEl=document.getElementById('tokenStatus');
+  function saveToken(){const t=tokenEl.value.trim();if(!t)return alert('Ingresa token');localStorage.setItem('github_token',t);tokenEl.value='';statusEl.innerText='✅ Token guardado';}
+  function clearToken(){localStorage.removeItem('github_token');statusEl.innerText='⚠️ Token borrado';}
+  function getToken(){return localStorage.getItem('github_token');}
 
-    let productos = [];
+  async function loadProducts(){try{const r=await fetch(RAW_URL,{cache:"no-store"});productos=await r.json();render(productos);updateCats();}catch(e){alert("Error cargando productos");}}
+  function render(list){const tb=document.getElementById('tbody');tb.innerHTML='';if(!list.length)return tb.innerHTML='<tr><td colspan="6" style="text-align:center">Sin productos</td></tr>';list.forEach((p,i)=>{tb.innerHTML+=`<tr><td><img src="${p.imagen}"></td><td>${p.nombre}</td><td>${p.descripcion}</td><td>${p.categoria}</td><td>$${p.precio}</td><td><button onclick="edit(${i})">Editar</button><button onclick="del(${i})">Eliminar</button></td></tr>`;});}
 
-    // 🟤 TOKEN
-    function saveToken(){
-      const t=document.getElementById('token').value.trim();
-      if(t){ 
-        localStorage.setItem('github_token',t); 
-        document.getElementById('token').value=''; 
-        document.getElementById('tokenStatus').innerText="✅ Token guardado."; 
-      }
-    }
-    function clearToken(){ 
-      localStorage.removeItem('github_token'); 
-      document.getElementById('tokenStatus').innerText="⚠️ Token borrado."; 
-    }
-    function getToken(){ return localStorage.getItem('github_token'); }
+  function updateCats(){const dat=document.getElementById('listaCategorias');dat.innerHTML='';[...new Set(productos.map(p=>p.categoria))].sort().forEach(c=>{dat.innerHTML+=`<option value="${c}">`;});}
 
-    // 🟤 CARGAR PRODUCTOS
-    async function loadProducts(){
-      const url=`https://raw.githubusercontent.com/${USERNAME}/${REPO}/main/${FILE_PATH}`;
-      const res=await fetch(url);
-      productos=await res.json();
-      render(productos);
-    }
+  // BUSCAR
+  const s=document.getElementById('search'); const b=document.getElementById('btnSearch');
+  function buscar(){const q=s.value.toLowerCase().trim();const res=productos.filter(p=>(p.nombre+p.descripcion+p.categoria).toLowerCase().includes(q));render(res);document.getElementById('tablaTitulo').scrollIntoView({behavior:'smooth'});}
+  s.addEventListener('keydown',e=>{if(e.key==='Enter'){e.preventDefault();buscar();}}); b.addEventListener('click',buscar);
 
-    // 🟤 RENDERIZAR TABLA
-    function render(lista = productos){
-      const tb=document.getElementById('tbody'); tb.innerHTML='';
-      lista.forEach((p)=>{
-        tb.innerHTML+=`
-          <tr>
-            <td><img src="${p.imagen}" alt=""></td>
-            <td>${p.nombre}</td>
-            <td>${p.descripcion}</td>
-            <td>${p.categoria}</td>
-            <td>$${p.precio}</td>
-            <td>
-              <button onclick="editByName('${p.nombre.replace(/'/g, "\\'")}')">Editar</button>
-              <button onclick="delByName('${p.nombre.replace(/'/g, "\\'")}')">Eliminar</button>
-            </td>
-          </tr>`;
-      });
-    }
+  window.previewImage=()=>document.getElementById('preview').src=document.getElementById('imagen').value.trim()||'';
 
-    function editByName(nombre){
-      const i=productos.findIndex(p=>p.nombre===nombre);
-      if(i!==-1) edit(i);
-    }
-    function delByName(nombre){
-      const i=productos.findIndex(p=>p.nombre===nombre);
-      if(i!==-1) del(i);
-    }
+  async function saveToGitHub(newContent){const TOKEN=getToken();if(!TOKEN)return alert("Guardá tu token primero");const api=`https://api.github.com/repos/${USER}/${REPO}/contents/${FILE}`;const get=await fetch(api,{headers:{Authorization:`token ${TOKEN}`}});const data=await get.json();const res=await fetch(api,{method:'PUT',headers:{Authorization:`token ${TOKEN}`,'Content-Type':'application/json'},body:JSON.stringify({message:'update admin',content:btoa(unescape(encodeURIComponent(newContent))),sha:data.sha})});alert(res.ok?'✅ Cambios guardados':'❌ Error al guardar');}
 
-    // 🟤 BUSCADOR
-    document.getElementById('search').addEventListener('keypress', function(e){
-      if(e.key === 'Enter'){
-        e.preventDefault();
-        const q=this.value.toLowerCase();
-        const filtrados=productos.filter(p=> 
-          p.nombre.toLowerCase().includes(q) || 
-          p.descripcion.toLowerCase().includes(q) ||
-          p.categoria.toLowerCase().includes(q)
-        );
-        render(filtrados);
-        document.getElementById('tablaTitulo').scrollIntoView({ behavior: "smooth" });
-      }
-    });
+  const form=document.getElementById('form');form.addEventListener('submit',e=>{e.preventDefault();const i=document.getElementById('editIndex').value;const prod={nombre:form.nombre.value,descripcion:form.descripcion.value,precio:parseFloat(form.precio.value),imagen:form.imagen.value,categoria:form.categoria.value};if(i==='')productos.push(prod);else productos[i]=prod;render(productos);updateCats();form.reset();document.getElementById('preview').src='';saveToGitHub(JSON.stringify(productos,null,2));});
 
-    // 🟤 PREVIEW
-    function previewImage(){
-      const src=document.getElementById('imagen').value.trim();
-      document.getElementById('preview').src=src || '';
-    }
+  window.edit=i=>{const p=productos[i];form.nombre.value=p.nombre;form.descripcion.value=p.descripcion;form.precio.value=p.precio;form.imagen.value=p.imagen;form.categoria.value=p.categoria;document.getElementById('editIndex').value=i;document.getElementById('preview').src=p.imagen;form.scrollIntoView({behavior:'smooth'});};
+  window.del=i=>{if(!confirm('Eliminar producto?'))return;productos.splice(i,1);render(productos);saveToGitHub(JSON.stringify(productos,null,2));};
 
-    // 🟤 GUARDAR EN GITHUB
-    async function saveToGitHub(newContent){
-      const TOKEN=getToken();
-      if(!TOKEN){ alert("⚠️ Necesitas guardar tu token primero."); return; }
+  const btn=document.getElementById('btnArriba');window.addEventListener('scroll',()=>btn.style.display=window.scrollY>300?'block':'none');btn.addEventListener('click',()=>window.scrollTo({top:0,behavior:'smooth'}));
 
-      const apiUrl=`https://api.github.com/repos/${USERNAME}/${REPO}/contents/${FILE_PATH}`;
-      const getRes=await fetch(apiUrl,{ headers:{Authorization:`token ${TOKEN}`} });
-      const data=await getRes.json();
-
-      const updateRes=await fetch(apiUrl,{
-        method:"PUT",
-        headers:{
-          "Authorization":`token ${TOKEN}`,
-          "Content-Type":"application/json"
-        },
-        body:JSON.stringify({
-          message:"Actualización desde admin.html",
-          content:btoa(unescape(encodeURIComponent(newContent))),
-          sha:data.sha
-        })
-      });
-
-      if(updateRes.ok){ alert("✅ Cambios guardados en GitHub."); }
-      else{ alert("❌ Error al guardar en GitHub."); }
-    }
-
-    // 🟤 FORMULARIO
-    document.getElementById('form').onsubmit=function(e){
-      e.preventDefault();
-
-      const categoriaInput = document.getElementById('categoria');
-      const datalist = document.getElementById('categorias');
-      const nuevaCategoria = categoriaInput.value.trim();
-      if (nuevaCategoria) {
-        const existe = Array.from(datalist.options).some(opt => opt.value.toLowerCase() === nuevaCategoria.toLowerCase());
-        if (!existe) {
-          const option = document.createElement('option');
-          option.value = nuevaCategoria;
-          datalist.appendChild(option);
-        }
-      }
-
-      const idx=document.getElementById('editIndex').value;
-      const prod={
-        nombre:document.getElementById('nombre').value,
-        descripcion:document.getElementById('descripcion').value,
-        precio:parseFloat(document.getElementById('precio').value),
-        imagen:document.getElementById('imagen').value,
-        categoria:document.getElementById('categoria').value
-      };
-      if(idx===''){ productos.push(prod);} 
-      else { productos[idx]=prod; document.getElementById('editIndex').value='';}
-      render(productos);
-      this.reset();
-      document.getElementById('preview').src='';
-      saveToGitHub(JSON.stringify(productos,null,2));
-    }
-
-    // 🟤 EDITAR
-    function edit(i){
-      const p=productos[i];
-      document.getElementById('nombre').value=p.nombre;
-      document.getElementById('descripcion').value=p.descripcion;
-      document.getElementById('precio').value=p.precio;
-      document.getElementById('imagen').value=p.imagen;
-      document.getElementById('categoria').value=p.categoria;
-      document.getElementById('editIndex').value=i;
-      document.getElementById('preview').src=p.imagen;
-      document.getElementById('form').scrollIntoView({ behavior: "smooth" });
-    }
-
-    // 🟤 ELIMINAR
-    function del(i){
-      if(confirm('¿Eliminar producto?')){
-        productos.splice(i,1);
-        render(productos);
-        saveToGitHub(JSON.stringify(productos,null,2));
-      }
-    }
-
-    // 🟤 BOTÓN SUBIR
-    const btnSubir=document.getElementById('btnSubir');
-    window.addEventListener('scroll',()=>{ btnSubir.style.display=window.scrollY>300?'block':'none'; });
-    btnSubir.addEventListener('click',()=>{ window.scrollTo({top:0,behavior:'smooth'}); });
-
-    // 🟤 INICIAR
-    loadProducts();
-    if(getToken()){ document.getElementById('tokenStatus').innerText="🔐 Token cargado."; }
-  </script>
+  loadProducts();if(getToken())statusEl.innerText='🔐 Token cargado';
+});
+</script>
 </body>
 </html>
